# invenio-subjects-fast

./: .gitignore  CHANGES.md  INSTALL.rst  LICENSE  MANIFEST.in  Pipfile  README.md  authors.rst  pyproject.toml  requirements.txt  run-tests.sh  setup.cfg  setup.py
invenio_subjects_fast/: __init__.py  cli.py  converter.py  downloader.py
invenio_subjects_fast/vocabularies/: __init__.py  subjects_fast_chronological.jsonl  subjects_fast_chronological.yaml  subjects_fast_event.jsonl  subjects_fast_event.yaml  subjects_fast_formgenre.jsonl  subjects_fast_formgenre.yaml  subjects_fast_meeting.jsonl  subjects_fast_meeting.yaml  vocabularies.yaml
tests/: conftest.py  test_cli.py  test_invenio_subjects_fast.py
tests/data/: FASTChronological.marcxml  FASTCorporate.marcxml  FASTEvent.marcxml  FASTFormGenre.marcxml  FASTGeographic.marcxml  FASTMeeting.marcxml  FASTPersonal.marcxml  FASTTitle.marcxml  FASTTopical.marcxml
tests/vocabularies/: subjects_fast_chronological.yaml  subjects_fast_corporate.yaml  subjects_fast_event.yaml  subjects_fast_formgenre.yaml  subjects_fast_geographic.yaml  subjects_fast_meeting.yaml  subjects_fast_personal.yaml  subjects_fast_title.yaml  subjects_fast_topical.yaml
