# -*- coding: utf-8 -*-
#
# Copyright (C) 2023 MESH Research
#
# invenio-subjects-fast is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
version = attr: invenio_subjects_fast.__version__

[options.entry_points]
console_scripts =
    invenio-subjects-fast = invenio_subjects_fast.cli:cli
invenio_rdm_records.fixtures =
    invenio_subjects_fast = invenio_subjects_fast.vocabularies

[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
    *.gitkeep

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --doctest-glob="*.rst" --doctest-modules
testpaths = tests invenio_subjects_fast

[pydocstyle]
add_ignore = D401